
- [Pro] Now, the copy of the AUTO_INDEX is done only if the `copyuserattrs` in
  Table.copy() is true (the default).

- [Pro] A new `sortby` argument has been added to Table.copy() allowing to a
  Table to be sorted during the copy operation.

- [Pro] New `propindexes` argument in Table.copy().  If true, the indexes in
  the source table are propagated (created) to the new table.  If false (the
  default), the indexes are not propagated.

- [Pro] New public Index.readSorted() and Index.readIndices() that allow
  direct access to an index data.

- Added new '--sortby' (sort a table by a column key), '--forceCSI' (force
  the creation of a CSI index) and '--propindexes' (propagate the indexes in
  original tables) flags to the 'ptrepack' utility.

- When in ptrepack a range is not specified, all the elements of leaves are
  copied now.  Before, only the first row was copied, and that was clearly
  wrong.

- New Table.colindexes property that returns a dictionary with the indexes of
  the indexed columns in table.


API changes from 2.0.x to 2.1b2
===============================

- The `trMap` argument has been removed from the tables.openFile() function.
  Also, Node._v_hdf5name attribute has been removed as well.  Fixes #117.

- The Table.indexFilters property has been removed (after a period of
  ``DeprecationWarnings``).  If you want to change filters in indexes, please
  use the `filters` parameter of the Column.createIndex() method (and the
  like).

- Table.willQueryUseIndexing() has changed its return value by a frozen set of
  usable indexed columns for its `condition` parameter.

- The `sort` parameter of Table.itersequence() has been removed as it will not
  allow to sort sequences larger than memory.  In addition, it is not clear
  that sorting would be a clear advantage in all situations.


----

  **Enjoy data!**

  -- The PyTables Team


.. Local Variables:
.. mode: rst
.. coding: utf-8
.. fill-column: 78
.. End: