@@ -56,6 +56,13 @@ Changes from 2.0.x to 2.1b2
 API changes from 2.0.x to 2.1b2
 ===============================
 
+- The AttributeSet class has received the next dictionary like methods:
+  __getitem__(), __setitem__() and __delitem__(), so that you can do things
+  like::
+
+    for name in node._v_attrs._f_list():
+        print "name: %s, value: %s" % (name, node._v_attrs[name])
+
 - The `trMap` argument has been removed from the tables.openFile() function.
   Also, Node._v_hdf5name attribute has been removed as well.  Fixes #117.
 
